API updateDebtPositionStatus
